First working simplest version skeleton

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "webpack.config.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "NODE_ENV=production webpack -p --colors"
+    "build": "NODE_ENV=production webpack -p --colors",
+    "postbuild": "if [ -d '../collective.solr' ]; then npm run integrate; fi",
+    "integrate": "cp dist/bundle.js ../collective.solr/src/collective/solr/static/dist/search.min.js && cp src/index.html ../collective.solr/src/collective/solr/static/. && cp src/index.jsx ../collective.solr/src/collective/solr/static/."
   },
   "keywords": [],
   "author": "kitconcept (Timo Stollenwerk)",
